2011-04-14  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-64
	* obo L.Duflot: attempt at better TFile recycling
	* warn a pattern could not be matched against any branch
	* M bin/filter-and-merge-d3pd.py

2011-03-31  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-63
	* prevent AthFile from freezing when invocated from an 'athena -i' job
	* M python/AthFile/impl.py

2011-03-28  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-62
	* tentative fix for bug #79926: if the timeout is reached, catch
  	  and carry on (HeavyIon jobs tend to have gazillions of entries
	  which make the athfile-infos.ascii huge-ish and slow to read)
	* M python/AthFile/impl.py

2011-03-18  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-61
	* fixing bug#79622 - ignore dups for vector<vector<double>> from
	  MathCore and AtlasSTLAddReflexDict
	* M bin/checkPlugins.py

2011-03-16  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-60
	* do not set any timeout when run from within valgrind
	* M python/AthFile/timerdecorator.py

2011-03-14  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-59
	* do not set any timeout when run from within valgrind
	* M python/AthFile/timerdecorator.py

	* tagging PyUtils-00-10-58
	* make sure PoolFile.checkFile gets AtlasCore as an environment
	  as some reflex dicts load StoreGateSvc as a side effect
	* M python/PoolFile.py

2011-03-11  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-57
	* fixing argument handling of dump-root
	* M python/RootUtils.py
	* M python/scripts/dump_root_file.py

2011-02-22  Sebastien Binet  <sebastien.binet@cern.ch>

	* tagging PyUtils-00-10-56
	* tentative fix for bug #78111: add a timeout around the cache
	  loading method.
	* A python/AthFile/timerdecorator.py
	* M python/AthFile/impl.py

2011-02-16  Sebastien Binet  <binet@voatlas51.cern.ch>

	* tagging PyUtils-00-10-55